AboutMe, Myskills, AboutMe - sections almost completed but contactMe section alignment not proprely fixed

--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,12 @@ body {
     color: rgba(255, 255, 255, 0.827);
 }
 
-#hero-section-content-box{
+#hero-section-content-box {
     margin-top: 12.5rem;
     padding-bottom: 70px;
 }
 
-.pro_image{
+.pro_image {
     height: 440px;
     width: 450px;
     margin-top: 6.5rem;
@@ -18,7 +18,7 @@ body {
 
 /* NavBar section start */
 
-.navbar{
+.navbar {
     z-index: 1;
     display: flex;
     justify-content: space-between;
@@ -32,7 +32,7 @@ body {
     right: 0;
 }
 
-.nav--items > ul {
+.nav--items>ul {
     list-style: none;
     display: flex;
     align-items: flex-start;
@@ -40,13 +40,13 @@ body {
     text-decoration: none;
 }
 
-.nav--items ul > li > a {
+.nav--items ul>li>a {
     text-decoration: none;
     padding-top: 2px;
     padding-bottom: 2px;
 }
 
-.nav--items ul > li :hover {
+.nav--items ul>li :hover {
     font-size: 18px;
     transition: 1s;
     text-shadow: 3px 5px 8px rgb(103, 103, 103);
@@ -108,7 +108,7 @@ body {
     gap: 30px;
     flex: 1 0 0;
     border-radius: 10.6px;
-    background-color: rgb(255, 253, 253);
+    background-color: rgb(224, 206, 166);
     min-height: 250px;
     transition: 2.5s;
 }
@@ -148,17 +148,18 @@ body {
     align-items: flex-start;
     gap: 32px;
     align-items: stretch;
-    
+
 }
 
-.skills--section--title { 
-    color:rgb(24, 24, 24);
+.skills--section--title {
+    color: rgb(24, 24, 24);
     font-size: 32px;
     font-weight: 700;
     line-height: 45px;
     padding-left: 8px;
     text-align: center;
 }
+
 .skills--section--description {
     margin: 6px 6px;
     text-align: center;
@@ -173,3 +174,99 @@ body {
 }
 
 /* skills section end  */
+
+
+/* AboutMe section start */
+
+.about--section {
+    height: 80vh;
+}
+
+.about--section--img {
+    height: 60vh;
+    margin-top: 10vh;
+}
+
+.about--section--description {
+    text-align: left;
+    margin-top: 25vh;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.about--section--button {
+    padding: 0.6em 2em;
+    border: none;
+    outline: none;
+    color: rgb(255, 255, 255);
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.about--section--button:before {
+    content: "";
+    background: linear-gradient(45deg,
+            #ff0000,
+            #ff7300,
+            #fffb00,
+            #48ff00,
+            #00ffd5,
+            #002bff,
+            #7a00ff,
+            #ff00c8,
+            #ff0000);
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing-button 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+}
+
+@keyframes glowing-button {
+    0% {
+        background-position: 0 0;
+    }
+
+    50% {
+        background-position: 600% 0;
+    }
+
+    100% {
+        background-position: 0 0;
+    }
+}
+
+.about--section--button:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #222;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+.about--section--img--sub {
+    height: 120%;
+    width: 60%;
+    border-radius: 10px;
+    margin: 10%;
+    box-shadow: 4px 5px 4px 8px rgba(255, 255, 255, 0.194);
+}
+
+
+/* AboutMe section end */
